Added automatic brightness adjustment based on the average brightness of the screen.

--- a/action_manifest.json
+++ b/action_manifest.json
@@ -8,7 +8,7 @@
    "actions" : [
       {
          "name" : "/actions/main/in/activate",
-         "requirement" : "suggested",
+         "requirement" : "optional",
          "type" : "boolean"
       },
       {
