--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net45" />
   <package id="Fody" version="6.1.1" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
+  <package id="OpenTK" version="3.2" targetFramework="net45" />
 </packages>
